--- a/inference_demo/templates/webapp.html
+++ b/inference_demo/templates/webapp.html
@@ -2,13 +2,15 @@
 
 {% block title %} Home@Imputation.io {% endblock %}
 
+{% block pagehead  %}
+    <h1>Imputation (<em>noun</em>):</h1><span class="subheading">The process of replacing missing data with substituted values.</span>
+{% endblock %}
+
 
 {% block body  %}
     <!-- Main content -->
     <div class="container p-3">
 
-        <h1>Imputation (<em>noun</em>):</h1><h2>The process of replacing missing data with substituted values.</h2>
-        <br><br>
         <p>This is an early/pre-alpha version of the census imputaiton model. It is trained on ~5 mil individuals in the 2012-2017 PUMS data.
             You can enter as much (or as little) information into the census imputation form and submit.
             What you will get back is a probability distribution on the unknown variables 
@@ -23,7 +25,7 @@
 
 <div class="row justify-content-center m-2">
 <div class="col-lg-4 p-3 m-2  border rounded border-dark">
-    <form action="{{ url_for('web_app')}}" method="POST" >
+    <form action="{{ url_for('web_app', _anchor='results')}}" method="POST" >
 
         <fieldset>
             <legend>Census imputation</legend>
@@ -64,8 +66,9 @@
 {% if pred_description %}
 
 
-
+  <a id="results"></a>
 <div class="col-lg-6 p-3 m-2 border rounded border-dark">
+
     {% for key in pred_description.keys() %}
     <div class="row p-3">
         <canvas id="{{ key.lower() }}"></canvas>
