--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,6 @@
 
+<!-- nav bar -->
+
 {% macro nav_link(endpoint, text) %}
 {% if request.endpoint and request.endpoint.endswith(endpoint) %}
     <li class="nav-item active"> <a class="nav-link" href="{{ url_for(endpoint) }}">{{text}}<span class="sr-only">(current)</span></a> </li>
@@ -6,6 +8,8 @@
     <li class="nav-item"> <a class="nav-link" href="{{ url_for(endpoint) }}">{{text}}</a> </li>
 {% endif %}
 {% endmacro %}
+
+<!-- plot graph -->
 
 {% macro plot_result(pred_description, description_dict, numeric_keys, key) %}
 
