--- a/app/templates/under_construction.html
+++ b/app/templates/under_construction.html
@@ -2,11 +2,11 @@
 
 {% block title %} Under construction {% endblock %}
 
-{% block pagehead  %}
-<h1>We are still under construction, please check back later</h1>
-{% endblock %}
 
 
 {% block body  %}
+<div class="container p-3">
+    <h1>We are still under construction, please check back later</h1>
+</div>
 
 {% endblock %}
