feat: implemented blueprints + factory pattern and passed tox

--- a/src/imputationflask/templates/layout.html
+++ b/src/imputationflask/templates/layout.html
@@ -58,9 +58,9 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
               <ul class="navbar-nav">
-                  {{ nav_link('web_app', 'Web app') }}
-                  {{ nav_link('how_it_works', 'How it works') }}
-                  {{ nav_link('about_api', 'Learn about the API') }}
+                  {{ nav_link('frontend.web_app', 'Web app') }}
+                  {{ nav_link('frontend.how_it_works', 'How it works') }}
+                  {{ nav_link('frontend.about_api', 'Learn about the API') }}
 
               </ul>
 
