--- a/src/imputationflask/templates/webapp.html
+++ b/src/imputationflask/templates/webapp.html
@@ -22,7 +22,7 @@
 
 <div class="row justify-content-center m-2">
 <div class="container border rounded border-dark m-3 p-2">
-    <form action="{{ url_for('web_app', _anchor='results')}}" method="POST" >
+    <form action="{{ url_for('frontend.web_app', _anchor='results')}}" method="POST" >
 
         <fieldset>
             <legend>Census imputation</legend>
