refactor: removed now unusued variables from webapp.html/macros.html

--- a/src/imputationflask/templates/macros.html
+++ b/src/imputationflask/templates/macros.html
@@ -11,7 +11,7 @@
 
 <!-- plot graph -->
 
-{% macro plot_result(pred_description, description_dict, numeric_keys, key, graph_data) %}
+{% macro plot_result( description_dict, numeric_keys, key, graph_data) %}
 
 {% if key in numeric_keys %}
 
