--- a/src/imputationflask/templates/webapp.html
+++ b/src/imputationflask/templates/webapp.html
@@ -48,8 +48,8 @@
                                 {{field[0](class_="form-control")}}
                             </div>
                         </div>
-                        {% if pred_description %}
-                            {% if field[0].id in pred_description %}
+                        {% if graph_data %}
+                            {% if field[0].id in graph_data %}
                             <div class="row">
                                 <div class="col">
                                  
@@ -75,10 +75,10 @@
 </div>
 
 
- {% if pred_description and graph_data %}
+ {% if graph_data %}
 <script>
-    {% for key in pred_description.keys() %}
-        {{ plot_result(pred_description, description_dict, numeric_keys, key, graph_data) }}
+    {% for key in graph_data.keys() %}
+        {{ plot_result(description_dict, numeric_keys, key, graph_data) }}
     {% endfor %}
 </script>
 {% endif %}
