--- a/src/imputationflask/templates/webapp.html
+++ b/src/imputationflask/templates/webapp.html
@@ -52,20 +52,13 @@
                             {% if field[0].id in graph_data %}
                             <div class="row">
                                 <div class="col">
-                                 
-
-                                            <canvas id="{{ field[0].id.lower() }}"></canvas>
-                                        
-         
+                                    <canvas style="min-height: 300px;" id="{{ field[0].id.lower() }}"></canvas>
                                 </div>
                             </div>
                             {% endif %}
                         {% endif %}
                         </div>
-
                 {% endfor %}
-
-
             </div>
             <br>
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -73,7 +66,6 @@
     </form>
 </div>
 </div>
-
 
  {% if graph_data %}
 <script>
