hotfix: min-height style didn't really work for mobile

--- a/src/imputationflask/templates/webapp.html
+++ b/src/imputationflask/templates/webapp.html
@@ -52,7 +52,7 @@
                             {% if field[0].id in graph_data %}
                             <div class="row">
                                 <div class="col">
-                                    <canvas style="min-height: 300px;" id="{{ field[0].id.lower() }}"></canvas>
+                                    <canvas id="{{ field[0].id.lower() }}"></canvas>
                                 </div>
                             </div>
                             {% endif %}
